--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,30 @@
     @apply bg-background text-foreground;
   }
 }
+
+.details-img {
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+  transition: 1s;
+}
+
+.details-img::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(148, 138, 138, 0);
+  transition: 0.3s ease-in-out background-color;
+  border-radius: 5px;
+}
+
+.details-img:hover::before {
+  background-color: rgb(135 133 133 / 50%);
+}
