styles: added slider styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,4 +56,16 @@
   body {
     @apply bg-background text-foreground;
   }
+  .rc-slider-track, .rc-slider-tracks {
+    background: transparent !important;
+  }
+  .rc-slider-handle {
+    height: 20px !important;
+    width: 20px !important;
+    background: #537fe7 !important;
+  }
+  .rc-slider-rail {
+    height: 9px !important;
+    border-radius: 50px !important;
+  }
 }
